editor-frame: add context menu to the search entry

We can now toggle various search settings with context menu, so
we do not need smart case sensitive any more, also, the search
now defaults to case insensitive.

https://bugzilla.gnome.org/show_bug.cgi?id=736522