libide/ide-source-view.c
@@ -1060,26 +1060,11 @@ ide_source_view__search_settings_notify_search_text (IdeSourceView           *se
 {
   IdeSourceViewPrivate *priv = ide_source_view_get_instance_private (self);
   const gchar *search_text;
-  gboolean case_sensitive = FALSE;
 
   g_assert (IDE_IS_SOURCE_VIEW (self));
   g_assert (GTK_SOURCE_IS_SEARCH_SETTINGS (search_settings));
 
   search_text = gtk_source_search_settings_get_search_text (search_settings);
-
-  if (search_text != NULL)
-    {
-      for (const gchar *s = search_text; *s; s = g_utf8_next_char (s))
-        {
-          if (g_unichar_isupper (g_utf8_get_char (s)))
-            {
-              case_sensitive = TRUE;
-              break;
-            }
-        }
-    }
-
-  gtk_source_search_settings_set_case_sensitive (search_settings, case_sensitive);
 
   /*
    * If we have IdeSourceView:rubberband-search enabled, then we should try to
@@ -1539,7 +1524,7 @@ ide_source_view_bind_buffer (IdeSourceView  *self,
   search_settings = g_object_new (GTK_SOURCE_TYPE_SEARCH_SETTINGS,
                                   "wrap-around", TRUE,
                                   "regex-enabled", FALSE,
-                                  "case-sensitive", TRUE,
+                                  "case-sensitive", FALSE,
                                   NULL);
   priv->search_context = g_object_new (GTK_SOURCE_TYPE_SEARCH_CONTEXT,
                                        "buffer", buffer,
@@ -3607,10 +3592,6 @@ ide_source_view_real_move_search (IdeSourceView    *self,
   gtk_source_search_context_set_highlight (priv->search_context, TRUE);
 
   settings = gtk_source_search_context_get_settings (priv->search_context);
-
-  if (word_boundaries != gtk_source_search_settings_get_at_word_boundaries (settings))
-    gtk_source_search_settings_set_at_word_boundaries (settings, word_boundaries);
-
   search_text = gtk_source_search_settings_get_search_text (settings);
 
   if (search_text == NULL || search_text[0] == '\0')
